--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
   <h1>Consulta tus datos</h1>
   
   <input type="email" id="email" placeholder="Ingresa tu correo electrónico">
-  <input type="number" id="numero" placeholder="Ingresa tu número">
+  <input type="text" id="numero" placeholder="Ingresa tu número">
   <button onclick="consultarDatos()">Consultar</button>
 
   <div id="resultado"></div>
 
   <script src="script.js"></script>
 </body>
+
 </html>
